# tiny-array

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
examples/: CMakeLists.txt
examples/cmake-usage/: CMakeLists.txt  main.cpp
include/adc_array/: adc_array.h  library.h
include/tiny_array/: tiny_array.h
src/: adc_array.cpp  library.cpp
tests/: CMakeLists.txt
tests/src/: test.cpp
